@@ -37,6 +37,7 @@
     session dont save default menu labels and icons
     add item prop Context Use as opener for option
     add Context verb pattern matches for wildcards #214
+    default Root|U/Mount commands use udevil
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
